fix overflow issue

--- a/src/indigo/less/main-content.less
+++ b/src/indigo/less/main-content.less
@@ -139,8 +139,6 @@
     padding: 0;
 
     > .kbc-container {
-        margin-right: -2px;
-        border-right: 1px solid @table-border-color;
         padding-left: 10px;
         padding-right: 10px;
     }
@@ -198,7 +196,6 @@
     padding: 0;
     border-left: 1px solid @table-border-color;
     position: relative;
-    left: 1px;
     min-height: 90vh;
 }
 
